examples/standard/simple-gateway/gateway.yaml
#$ Used in:
#$ - guides/getting-started/simple-gateway.md
#$ - guides/user-guides/traffic-splitting.md
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: example
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
