examples/standard/simple-gateway/httproute.yaml
#$ Used in:
#$ - site-src/guides/getting-started/simple-gateway.md
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: foo-svc
      port: 8080
